<resources>
    <string name="app_name">ReserveMac</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="ftype">
        <item>Multipurpose Rooms</item>
        <item>5 Indoor Basketball Court</item>
        <item>9 Volleyball Court</item>
        <item>Indoor Soccer Gymnasium</item>
        <item>5 Racquetball Courts</item>
        <item>10 Badminton Courts</item>
        <item>Table Tennis</item>
        <item>Conference Rooms</item>
        <item>2 Outdoor Volleyball Courts</item>
        <item>2 Outdoor Basketball Courts</item>

    </string-array>

    <string-array name="fname">
        <item>MR 1</item>
        <item>MR 2</item>
        <item>MR 3</item>
        <item>MR 4</item>


    </string-array>

</resources>
